// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleIdentityList snapshot matches snapshot when fetch failed 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.command.add",
          "iconProps": {
            "iconName": "BoxAdditionSolid",
          },
          "key": "BoxAdditionSolid",
          "name": "moduleIdentity.command.add",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.command.refresh",
          "disabled": false,
          "iconProps": {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <HeaderView
    headerText="moduleIdentity.headerText"
    link="moduleIdentity.link"
    tooltip="moduleIdentity.tooltip"
  />
  <div
    className="device-detail"
  >
    <div
      className="list-detail"
    >
      <ResizableDetailsList
        columns={
          [
            {
              "ariaLabel": "moduleIdentity.columns.moduleId",
              "fieldName": "moduleId",
              "key": "moduleId",
              "maxWidth": 200,
              "minWidth": 50,
              "name": "moduleIdentity.columns.moduleId",
            },
            {
              "ariaLabel": "moduleIdentity.columns.connectionState",
              "fieldName": "connectionState",
              "key": "connectionState",
              "maxWidth": 200,
              "minWidth": 50,
              "name": "moduleIdentity.columns.connectionState",
            },
            {
              "ariaLabel": "moduleIdentity.columns.connectionStateLastUpdated",
              "fieldName": "connectionStateLastUpdated",
              "key": "connectionStateLastUpdated",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.connectionStateLastUpdated",
            },
            {
              "ariaLabel": "moduleIdentity.columns.lastActivityTime",
              "fieldName": "lastActivityTime",
              "key": "lastActivityTime",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.lastActivityTime",
            },
            {
              "ariaLabel": "moduleIdentity.columns.modelId",
              "fieldName": "modelId",
              "key": "modelId",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.modelId",
            },
          ]
        }
        items={[]}
        onRenderItemColumn={[Function]}
        selectionMode={0}
      />
    </div>
    moduleIdentity.errorFetching
  </div>
</Fragment>
`;

exports[`ModuleIdentityList snapshot matches snapshot while loading 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.command.add",
          "iconProps": {
            "iconName": "BoxAdditionSolid",
          },
          "key": "BoxAdditionSolid",
          "name": "moduleIdentity.command.add",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.command.refresh",
          "disabled": true,
          "iconProps": {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <HeaderView
    headerText="moduleIdentity.headerText"
    link="moduleIdentity.link"
    tooltip="moduleIdentity.tooltip"
  />
  <div
    className="device-detail"
  >
    <div
      className="list-detail"
    >
      <ResizableDetailsList
        columns={
          [
            {
              "ariaLabel": "moduleIdentity.columns.moduleId",
              "fieldName": "moduleId",
              "key": "moduleId",
              "maxWidth": 200,
              "minWidth": 50,
              "name": "moduleIdentity.columns.moduleId",
            },
            {
              "ariaLabel": "moduleIdentity.columns.connectionState",
              "fieldName": "connectionState",
              "key": "connectionState",
              "maxWidth": 200,
              "minWidth": 50,
              "name": "moduleIdentity.columns.connectionState",
            },
            {
              "ariaLabel": "moduleIdentity.columns.connectionStateLastUpdated",
              "fieldName": "connectionStateLastUpdated",
              "key": "connectionStateLastUpdated",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.connectionStateLastUpdated",
            },
            {
              "ariaLabel": "moduleIdentity.columns.lastActivityTime",
              "fieldName": "lastActivityTime",
              "key": "lastActivityTime",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.lastActivityTime",
            },
            {
              "ariaLabel": "moduleIdentity.columns.modelId",
              "fieldName": "modelId",
              "key": "modelId",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.modelId",
            },
          ]
        }
        items={[]}
        onRenderItemColumn={[Function]}
        selectionMode={0}
      />
    </div>
    <MultiLineShimmer />
  </div>
</Fragment>
`;

exports[`ModuleIdentityList snapshot matches snapshot with moduleIdentityList 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    items={
      [
        {
          "ariaLabel": "moduleIdentity.command.add",
          "iconProps": {
            "iconName": "BoxAdditionSolid",
          },
          "key": "BoxAdditionSolid",
          "name": "moduleIdentity.command.add",
          "onClick": [Function],
        },
        {
          "ariaLabel": "moduleIdentity.command.refresh",
          "disabled": true,
          "iconProps": {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "moduleIdentity.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <HeaderView
    headerText="moduleIdentity.headerText"
    link="moduleIdentity.link"
    tooltip="moduleIdentity.tooltip"
  />
  <div
    className="device-detail"
  >
    <div
      className="list-detail"
    >
      <ResizableDetailsList
        columns={
          [
            {
              "ariaLabel": "moduleIdentity.columns.moduleId",
              "fieldName": "moduleId",
              "key": "moduleId",
              "maxWidth": 200,
              "minWidth": 50,
              "name": "moduleIdentity.columns.moduleId",
            },
            {
              "ariaLabel": "moduleIdentity.columns.connectionState",
              "fieldName": "connectionState",
              "key": "connectionState",
              "maxWidth": 200,
              "minWidth": 50,
              "name": "moduleIdentity.columns.connectionState",
            },
            {
              "ariaLabel": "moduleIdentity.columns.connectionStateLastUpdated",
              "fieldName": "connectionStateLastUpdated",
              "key": "connectionStateLastUpdated",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.connectionStateLastUpdated",
            },
            {
              "ariaLabel": "moduleIdentity.columns.lastActivityTime",
              "fieldName": "lastActivityTime",
              "key": "lastActivityTime",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.lastActivityTime",
            },
            {
              "ariaLabel": "moduleIdentity.columns.modelId",
              "fieldName": "modelId",
              "key": "modelId",
              "maxWidth": 250,
              "minWidth": 150,
              "name": "moduleIdentity.columns.modelId",
            },
          ]
        }
        items={
          [
            {
              "authentication": null,
              "deviceId": "testDevice",
              "moduleId": "testModule",
            },
          ]
        }
        onRenderItemColumn={[Function]}
        selectionMode={0}
      />
    </div>
    <MultiLineShimmer />
  </div>
</Fragment>
`;
